[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/logo.png" type="Texture" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://fonts/DELTARUNE-font-size16.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/DELTARUNE-font-size128.tres" type="DynamicFont" id=4]

[node name="HUD" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 1080.0
color = Color( 0, 0.862745, 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 978, 95.25 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 1 )

[node name="small_pipis" type="Button" parent="."]
margin_left = 31.0
margin_top = 201.0
margin_right = 251.0
margin_bottom = 223.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "small pipis (10 Kromer)"

[node name="medium_pipis" type="Button" parent="."]
margin_left = 30.0
margin_top = 275.0
margin_right = 250.0
margin_bottom = 295.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "medium pipis (100 Kromer)"

[node name="huge_pipis" type="Button" parent="."]
margin_left = 30.0
margin_top = 425.0
margin_right = 250.0
margin_bottom = 445.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "huge pipis (1000 Kromer)"

[node name="cungadero" type="Button" parent="."]
margin_left = 30.0
margin_top = 650.0
margin_right = 250.0
margin_bottom = 670.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "cungadero (20000 Kromer)"

[node name="holy_cungadero" type="Button" parent="."]
margin_left = 30.0
margin_top = 725.0
margin_right = 250.0
margin_bottom = 745.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "holy cungadero (50000 Kromer)"

[node name="super_pipis" type="Button" parent="."]
margin_left = 30.0
margin_top = 575.0
margin_right = 250.0
margin_bottom = 595.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "super pipis (10000 Kromer)"

[node name="big_shot" type="Button" parent="."]
margin_left = 30.0
margin_top = 800.0
margin_right = 250.0
margin_bottom = 864.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "BIG SHOT!!! (1000000 Kromer)"

[node name="big_pipis" type="Button" parent="."]
margin_left = 30.0
margin_top = 350.0
margin_right = 250.0
margin_bottom = 370.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "big pipis (500 Kromer)"

[node name="large_pipis" type="Button" parent="."]
margin_left = 30.0
margin_top = 500.0
margin_right = 250.0
margin_bottom = 520.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "large pipis (5000 Kromer)"

[node name="Label" type="Label" parent="."]
margin_left = 37.0
margin_top = 32.0
margin_right = 141.0
margin_bottom = 67.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Kromer amount:
"
align = 1

[node name="pipis_label" type="Label" parent="."]
margin_left = 1.0
margin_top = 82.0
margin_right = 95.0
margin_bottom = 114.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label2" type="Label" parent="."]
margin_left = 280.0
margin_top = 17.0
margin_right = 366.0
margin_bottom = 52.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Kromer per 
click:"
align = 1

[node name="income_label" type="Label" parent="."]
margin_left = 238.0
margin_top = 92.0
margin_right = 324.0
margin_bottom = 124.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1

[node name="NEp_node2D" type="Node2D" parent="."]
visible = false
z_index = 3

[node name="NEp_rect" type="ColorRect" parent="NEp_node2D"]
margin_left = 500.0
margin_top = 802.0
margin_right = 1440.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.784314 )

[node name="NEp" type="Label" parent="NEp_node2D/NEp_rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -64.0
margin_right = 448.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
text = "NOT ENOUGH Kromer"
align = 1
valign = 1

[connection signal="pressed" from="small_pipis" to="." method="_on_small_pipis_pressed"]
[connection signal="pressed" from="medium_pipis" to="." method="_on_medium_pipis_pressed"]
[connection signal="pressed" from="huge_pipis" to="." method="_on_huge_pipis_pressed"]
[connection signal="pressed" from="cungadero" to="." method="_on_cungadero_pressed"]
[connection signal="pressed" from="holy_cungadero" to="." method="_on_holy_cungadero_pressed"]
[connection signal="pressed" from="super_pipis" to="." method="_on_super_pipis_pressed"]
[connection signal="pressed" from="big_shot" to="." method="_on_big_shot_pressed"]
[connection signal="pressed" from="big_pipis" to="." method="_on_big_pipis_pressed"]
[connection signal="pressed" from="large_pipis" to="." method="_on_large_pipis_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
